// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfo Component should match snapshot for props isEdit is false 1`] = `
<div>
  <div
    class="grid grid-cols-1 sm:grid-cols-2 md:gap-4 items-start p-4 bg-white dark:bg-dark-tremor-primary rounded-lg shadow-box-icon-default auto-rows-min h-full"
  >
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="name"
        >
          Name
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              id="name"
              name="name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="email"
        >
          Email
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              id="email"
              type="email"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter capitalize after:content-['*'] after:text-red-500 after:text-md"
        >
          Gender
        </label>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default"
        >
          <select
            class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
            title="select-hidden"
          >
            <option
              class="hidden"
              disabled=""
              hidden=""
              value=""
            >
              Male
            </option>
            <option
              class="hidden"
              value="0"
            >
              Male
            </option>
            <option
              class="hidden"
              value="1"
            >
              Female
            </option>
          </select>
          <div
            class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
            data-headlessui-state=""
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
              data-headlessui-state=""
              id="headlessui-listbox-button-:r5:"
              type="button"
            >
              <span
                class="w-[90%] block truncate"
              >
                Male
              </span>
              <span
                class="absolute inset-y-0 right-0 flex items-center mr-3"
              >
                <svg
                  class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter"
          for="phoneNumber"
        >
          Phone number
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <span
            class="absolute top-0 left-0 text-sm min-h-[30px] py-1.5 text-primary dark:text-white"
          >
            +1
          </span>
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 pl-[20px]"
              id="phoneNumber"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid-cols-subgrid col-span-1 mb-4 sm:col-span-2 md:mb-0"
    >
      <div
        class="min-h-20"
      >
        <p
          class="text-tremor-default text-grey text-sm dark:text-lighter capitalize after:content-['*'] after:text-red-500 after:text-md"
        >
          Birth date
        </p>
        <div
          class="flex flex-col md:flex-row gap-6"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Year
                </option>
                <option
                  class="hidden"
                  value="1900"
                >
                  1900
                </option>
                <option
                  class="hidden"
                  value="1901"
                >
                  1901
                </option>
                <option
                  class="hidden"
                  value="1902"
                >
                  1902
                </option>
                <option
                  class="hidden"
                  value="1903"
                >
                  1903
                </option>
                <option
                  class="hidden"
                  value="1904"
                >
                  1904
                </option>
                <option
                  class="hidden"
                  value="1905"
                >
                  1905
                </option>
                <option
                  class="hidden"
                  value="1906"
                >
                  1906
                </option>
                <option
                  class="hidden"
                  value="1907"
                >
                  1907
                </option>
                <option
                  class="hidden"
                  value="1908"
                >
                  1908
                </option>
                <option
                  class="hidden"
                  value="1909"
                >
                  1909
                </option>
                <option
                  class="hidden"
                  value="1910"
                >
                  1910
                </option>
                <option
                  class="hidden"
                  value="1911"
                >
                  1911
                </option>
                <option
                  class="hidden"
                  value="1912"
                >
                  1912
                </option>
                <option
                  class="hidden"
                  value="1913"
                >
                  1913
                </option>
                <option
                  class="hidden"
                  value="1914"
                >
                  1914
                </option>
                <option
                  class="hidden"
                  value="1915"
                >
                  1915
                </option>
                <option
                  class="hidden"
                  value="1916"
                >
                  1916
                </option>
                <option
                  class="hidden"
                  value="1917"
                >
                  1917
                </option>
                <option
                  class="hidden"
                  value="1918"
                >
                  1918
                </option>
                <option
                  class="hidden"
                  value="1919"
                >
                  1919
                </option>
                <option
                  class="hidden"
                  value="1920"
                >
                  1920
                </option>
                <option
                  class="hidden"
                  value="1921"
                >
                  1921
                </option>
                <option
                  class="hidden"
                  value="1922"
                >
                  1922
                </option>
                <option
                  class="hidden"
                  value="1923"
                >
                  1923
                </option>
                <option
                  class="hidden"
                  value="1924"
                >
                  1924
                </option>
                <option
                  class="hidden"
                  value="1925"
                >
                  1925
                </option>
                <option
                  class="hidden"
                  value="1926"
                >
                  1926
                </option>
                <option
                  class="hidden"
                  value="1927"
                >
                  1927
                </option>
                <option
                  class="hidden"
                  value="1928"
                >
                  1928
                </option>
                <option
                  class="hidden"
                  value="1929"
                >
                  1929
                </option>
                <option
                  class="hidden"
                  value="1930"
                >
                  1930
                </option>
                <option
                  class="hidden"
                  value="1931"
                >
                  1931
                </option>
                <option
                  class="hidden"
                  value="1932"
                >
                  1932
                </option>
                <option
                  class="hidden"
                  value="1933"
                >
                  1933
                </option>
                <option
                  class="hidden"
                  value="1934"
                >
                  1934
                </option>
                <option
                  class="hidden"
                  value="1935"
                >
                  1935
                </option>
                <option
                  class="hidden"
                  value="1936"
                >
                  1936
                </option>
                <option
                  class="hidden"
                  value="1937"
                >
                  1937
                </option>
                <option
                  class="hidden"
                  value="1938"
                >
                  1938
                </option>
                <option
                  class="hidden"
                  value="1939"
                >
                  1939
                </option>
                <option
                  class="hidden"
                  value="1940"
                >
                  1940
                </option>
                <option
                  class="hidden"
                  value="1941"
                >
                  1941
                </option>
                <option
                  class="hidden"
                  value="1942"
                >
                  1942
                </option>
                <option
                  class="hidden"
                  value="1943"
                >
                  1943
                </option>
                <option
                  class="hidden"
                  value="1944"
                >
                  1944
                </option>
                <option
                  class="hidden"
                  value="1945"
                >
                  1945
                </option>
                <option
                  class="hidden"
                  value="1946"
                >
                  1946
                </option>
                <option
                  class="hidden"
                  value="1947"
                >
                  1947
                </option>
                <option
                  class="hidden"
                  value="1948"
                >
                  1948
                </option>
                <option
                  class="hidden"
                  value="1949"
                >
                  1949
                </option>
                <option
                  class="hidden"
                  value="1950"
                >
                  1950
                </option>
                <option
                  class="hidden"
                  value="1951"
                >
                  1951
                </option>
                <option
                  class="hidden"
                  value="1952"
                >
                  1952
                </option>
                <option
                  class="hidden"
                  value="1953"
                >
                  1953
                </option>
                <option
                  class="hidden"
                  value="1954"
                >
                  1954
                </option>
                <option
                  class="hidden"
                  value="1955"
                >
                  1955
                </option>
                <option
                  class="hidden"
                  value="1956"
                >
                  1956
                </option>
                <option
                  class="hidden"
                  value="1957"
                >
                  1957
                </option>
                <option
                  class="hidden"
                  value="1958"
                >
                  1958
                </option>
                <option
                  class="hidden"
                  value="1959"
                >
                  1959
                </option>
                <option
                  class="hidden"
                  value="1960"
                >
                  1960
                </option>
                <option
                  class="hidden"
                  value="1961"
                >
                  1961
                </option>
                <option
                  class="hidden"
                  value="1962"
                >
                  1962
                </option>
                <option
                  class="hidden"
                  value="1963"
                >
                  1963
                </option>
                <option
                  class="hidden"
                  value="1964"
                >
                  1964
                </option>
                <option
                  class="hidden"
                  value="1965"
                >
                  1965
                </option>
                <option
                  class="hidden"
                  value="1966"
                >
                  1966
                </option>
                <option
                  class="hidden"
                  value="1967"
                >
                  1967
                </option>
                <option
                  class="hidden"
                  value="1968"
                >
                  1968
                </option>
                <option
                  class="hidden"
                  value="1969"
                >
                  1969
                </option>
                <option
                  class="hidden"
                  value="1970"
                >
                  1970
                </option>
                <option
                  class="hidden"
                  value="1971"
                >
                  1971
                </option>
                <option
                  class="hidden"
                  value="1972"
                >
                  1972
                </option>
                <option
                  class="hidden"
                  value="1973"
                >
                  1973
                </option>
                <option
                  class="hidden"
                  value="1974"
                >
                  1974
                </option>
                <option
                  class="hidden"
                  value="1975"
                >
                  1975
                </option>
                <option
                  class="hidden"
                  value="1976"
                >
                  1976
                </option>
                <option
                  class="hidden"
                  value="1977"
                >
                  1977
                </option>
                <option
                  class="hidden"
                  value="1978"
                >
                  1978
                </option>
                <option
                  class="hidden"
                  value="1979"
                >
                  1979
                </option>
                <option
                  class="hidden"
                  value="1980"
                >
                  1980
                </option>
                <option
                  class="hidden"
                  value="1981"
                >
                  1981
                </option>
                <option
                  class="hidden"
                  value="1982"
                >
                  1982
                </option>
                <option
                  class="hidden"
                  value="1983"
                >
                  1983
                </option>
                <option
                  class="hidden"
                  value="1984"
                >
                  1984
                </option>
                <option
                  class="hidden"
                  value="1985"
                >
                  1985
                </option>
                <option
                  class="hidden"
                  value="1986"
                >
                  1986
                </option>
                <option
                  class="hidden"
                  value="1987"
                >
                  1987
                </option>
                <option
                  class="hidden"
                  value="1988"
                >
                  1988
                </option>
                <option
                  class="hidden"
                  value="1989"
                >
                  1989
                </option>
                <option
                  class="hidden"
                  value="1990"
                >
                  1990
                </option>
                <option
                  class="hidden"
                  value="1991"
                >
                  1991
                </option>
                <option
                  class="hidden"
                  value="1992"
                >
                  1992
                </option>
                <option
                  class="hidden"
                  value="1993"
                >
                  1993
                </option>
                <option
                  class="hidden"
                  value="1994"
                >
                  1994
                </option>
                <option
                  class="hidden"
                  value="1995"
                >
                  1995
                </option>
                <option
                  class="hidden"
                  value="1996"
                >
                  1996
                </option>
                <option
                  class="hidden"
                  value="1997"
                >
                  1997
                </option>
                <option
                  class="hidden"
                  value="1998"
                >
                  1998
                </option>
                <option
                  class="hidden"
                  value="1999"
                >
                  1999
                </option>
                <option
                  class="hidden"
                  value="2000"
                >
                  2000
                </option>
                <option
                  class="hidden"
                  value="2001"
                >
                  2001
                </option>
                <option
                  class="hidden"
                  value="2002"
                >
                  2002
                </option>
                <option
                  class="hidden"
                  value="2003"
                >
                  2003
                </option>
                <option
                  class="hidden"
                  value="2004"
                >
                  2004
                </option>
                <option
                  class="hidden"
                  value="2005"
                >
                  2005
                </option>
                <option
                  class="hidden"
                  value="2006"
                >
                  2006
                </option>
                <option
                  class="hidden"
                  value="2007"
                >
                  2007
                </option>
                <option
                  class="hidden"
                  value="2008"
                >
                  2008
                </option>
                <option
                  class="hidden"
                  value="2009"
                >
                  2009
                </option>
                <option
                  class="hidden"
                  value="2010"
                >
                  2010
                </option>
                <option
                  class="hidden"
                  value="2011"
                >
                  2011
                </option>
                <option
                  class="hidden"
                  value="2012"
                >
                  2012
                </option>
                <option
                  class="hidden"
                  value="2013"
                >
                  2013
                </option>
                <option
                  class="hidden"
                  value="2014"
                >
                  2014
                </option>
                <option
                  class="hidden"
                  value="2015"
                >
                  2015
                </option>
                <option
                  class="hidden"
                  value="2016"
                >
                  2016
                </option>
                <option
                  class="hidden"
                  value="2017"
                >
                  2017
                </option>
                <option
                  class="hidden"
                  value="2018"
                >
                  2018
                </option>
                <option
                  class="hidden"
                  value="2019"
                >
                  2019
                </option>
                <option
                  class="hidden"
                  value="2020"
                >
                  2020
                </option>
                <option
                  class="hidden"
                  value="2021"
                >
                  2021
                </option>
                <option
                  class="hidden"
                  value="2022"
                >
                  2022
                </option>
                <option
                  class="hidden"
                  value="2023"
                >
                  2023
                </option>
                <option
                  class="hidden"
                  value="2024"
                >
                  2024
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="year"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r6:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Year
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Month
                </option>
                <option
                  class="hidden"
                  value="0"
                >
                  January
                </option>
                <option
                  class="hidden"
                  value="1"
                >
                  February
                </option>
                <option
                  class="hidden"
                  value="2"
                >
                  March
                </option>
                <option
                  class="hidden"
                  value="3"
                >
                  April
                </option>
                <option
                  class="hidden"
                  value="4"
                >
                  May
                </option>
                <option
                  class="hidden"
                  value="5"
                >
                  June
                </option>
                <option
                  class="hidden"
                  value="6"
                >
                  July
                </option>
                <option
                  class="hidden"
                  value="7"
                >
                  August
                </option>
                <option
                  class="hidden"
                  value="8"
                >
                  September
                </option>
                <option
                  class="hidden"
                  value="9"
                >
                  October
                </option>
                <option
                  class="hidden"
                  value="10"
                >
                  November
                </option>
                <option
                  class="hidden"
                  value="11"
                >
                  December
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="month"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r7:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Month
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Day
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="date"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r8:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Day
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter"
          for="location"
        >
          Location
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              id="location"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter capitalize"
      >
        Skills
      </p>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            React
          </option>
          <option
            class="hidden"
            value="1"
          >
            Vue
          </option>
          <option
            class="hidden"
            value="2"
          >
            Angular
          </option>
          <option
            class="hidden"
            value="3"
          >
            Svelte
          </option>
          <option
            class="hidden"
            value="4"
          >
            Javascript
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r9:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1 bg-transparent"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="password"
        >
          Password
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <div
              class="relative"
            >
              <input
                class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50"
                id="password"
                required=""
                type="password"
                value=""
              />
              <div
                class="absolute right-0 top-0 mt-2 mr-2 hover:cursor-pointer hover:opacity-75"
              >
                <svg
                  class="text-primary text-xl dark:hover:text-white"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.18164 12C2.12215 6.87976 6.60812 3 12.0003 3C17.3924 3 21.8784 6.87976 22.8189 12C21.8784 17.1202 17.3924 21 12.0003 21C6.60812 21 2.12215 17.1202 1.18164 12ZM12.0003 17C14.7617 17 17.0003 14.7614 17.0003 12C17.0003 9.23858 14.7617 7 12.0003 7C9.23884 7 7.00026 9.23858 7.00026 12C7.00026 14.7614 9.23884 17 12.0003 17ZM12.0003 15C10.3434 15 9.00026 13.6569 9.00026 12C9.00026 10.3431 10.3434 9 12.0003 9C13.6571 9 15.0003 10.3431 15.0003 12C15.0003 13.6569 13.6571 15 12.0003 15Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1 bg-transparent"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="confirm-password"
        >
          Confirm Password
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <div
              class="relative"
            >
              <input
                class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50"
                id="confirm-password"
                required=""
                type="password"
                value=""
              />
              <div
                class="absolute right-0 top-0 mt-2 mr-2 hover:cursor-pointer hover:opacity-75"
              >
                <svg
                  class="text-primary text-xl dark:hover:text-white"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.18164 12C2.12215 6.87976 6.60812 3 12.0003 3C17.3924 3 21.8784 6.87976 22.8189 12C21.8784 17.1202 17.3924 21 12.0003 21C6.60812 21 2.12215 17.1202 1.18164 12ZM12.0003 17C14.7617 17 17.0003 14.7614 17.0003 12C17.0003 9.23858 14.7617 7 12.0003 7C9.23884 7 7.00026 9.23858 7.00026 12C7.00026 14.7614 9.23884 17 12.0003 17ZM12.0003 15C10.3434 15 9.00026 13.6569 9.00026 12C9.00026 10.3431 10.3434 9 12.0003 9C13.6571 9 15.0003 10.3431 15.0003 12C15.0003 13.6569 13.6571 15 12.0003 15Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserInfo Component should match snapshot for props isEdit is true 1`] = `
<div>
  <div
    class="grid grid-cols-1 sm:grid-cols-2 md:gap-4 items-start p-4 bg-white dark:bg-dark-tremor-primary rounded-lg shadow-box-icon-default auto-rows-min h-full"
  >
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="name"
        >
          Name
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              id="name"
              name="name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="email"
        >
          Email
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              disabled=""
              id="email"
              type="email"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter capitalize after:content-['*'] after:text-red-500 after:text-md"
        >
          Gender
        </label>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default"
        >
          <select
            class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
            title="select-hidden"
          >
            <option
              class="hidden"
              disabled=""
              hidden=""
              value=""
            >
              Male
            </option>
            <option
              class="hidden"
              value="0"
            >
              Male
            </option>
            <option
              class="hidden"
              value="1"
            >
              Female
            </option>
          </select>
          <div
            class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
            data-headlessui-state=""
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
              data-headlessui-state=""
              id="headlessui-listbox-button-:r0:"
              type="button"
            >
              <span
                class="w-[90%] block truncate"
              >
                Male
              </span>
              <span
                class="absolute inset-y-0 right-0 flex items-center mr-3"
              >
                <svg
                  class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter"
          for="phoneNumber"
        >
          Phone number
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <span
            class="absolute top-0 left-0 text-sm min-h-[30px] py-1.5 text-primary dark:text-white"
          >
            +1
          </span>
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 pl-[20px]"
              id="phoneNumber"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid-cols-subgrid col-span-1 mb-4 sm:col-span-2 md:mb-0"
    >
      <div
        class="min-h-20"
      >
        <p
          class="text-tremor-default text-grey text-sm dark:text-lighter capitalize after:content-['*'] after:text-red-500 after:text-md"
        >
          Birth date
        </p>
        <div
          class="flex flex-col md:flex-row gap-6"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Year
                </option>
                <option
                  class="hidden"
                  value="1900"
                >
                  1900
                </option>
                <option
                  class="hidden"
                  value="1901"
                >
                  1901
                </option>
                <option
                  class="hidden"
                  value="1902"
                >
                  1902
                </option>
                <option
                  class="hidden"
                  value="1903"
                >
                  1903
                </option>
                <option
                  class="hidden"
                  value="1904"
                >
                  1904
                </option>
                <option
                  class="hidden"
                  value="1905"
                >
                  1905
                </option>
                <option
                  class="hidden"
                  value="1906"
                >
                  1906
                </option>
                <option
                  class="hidden"
                  value="1907"
                >
                  1907
                </option>
                <option
                  class="hidden"
                  value="1908"
                >
                  1908
                </option>
                <option
                  class="hidden"
                  value="1909"
                >
                  1909
                </option>
                <option
                  class="hidden"
                  value="1910"
                >
                  1910
                </option>
                <option
                  class="hidden"
                  value="1911"
                >
                  1911
                </option>
                <option
                  class="hidden"
                  value="1912"
                >
                  1912
                </option>
                <option
                  class="hidden"
                  value="1913"
                >
                  1913
                </option>
                <option
                  class="hidden"
                  value="1914"
                >
                  1914
                </option>
                <option
                  class="hidden"
                  value="1915"
                >
                  1915
                </option>
                <option
                  class="hidden"
                  value="1916"
                >
                  1916
                </option>
                <option
                  class="hidden"
                  value="1917"
                >
                  1917
                </option>
                <option
                  class="hidden"
                  value="1918"
                >
                  1918
                </option>
                <option
                  class="hidden"
                  value="1919"
                >
                  1919
                </option>
                <option
                  class="hidden"
                  value="1920"
                >
                  1920
                </option>
                <option
                  class="hidden"
                  value="1921"
                >
                  1921
                </option>
                <option
                  class="hidden"
                  value="1922"
                >
                  1922
                </option>
                <option
                  class="hidden"
                  value="1923"
                >
                  1923
                </option>
                <option
                  class="hidden"
                  value="1924"
                >
                  1924
                </option>
                <option
                  class="hidden"
                  value="1925"
                >
                  1925
                </option>
                <option
                  class="hidden"
                  value="1926"
                >
                  1926
                </option>
                <option
                  class="hidden"
                  value="1927"
                >
                  1927
                </option>
                <option
                  class="hidden"
                  value="1928"
                >
                  1928
                </option>
                <option
                  class="hidden"
                  value="1929"
                >
                  1929
                </option>
                <option
                  class="hidden"
                  value="1930"
                >
                  1930
                </option>
                <option
                  class="hidden"
                  value="1931"
                >
                  1931
                </option>
                <option
                  class="hidden"
                  value="1932"
                >
                  1932
                </option>
                <option
                  class="hidden"
                  value="1933"
                >
                  1933
                </option>
                <option
                  class="hidden"
                  value="1934"
                >
                  1934
                </option>
                <option
                  class="hidden"
                  value="1935"
                >
                  1935
                </option>
                <option
                  class="hidden"
                  value="1936"
                >
                  1936
                </option>
                <option
                  class="hidden"
                  value="1937"
                >
                  1937
                </option>
                <option
                  class="hidden"
                  value="1938"
                >
                  1938
                </option>
                <option
                  class="hidden"
                  value="1939"
                >
                  1939
                </option>
                <option
                  class="hidden"
                  value="1940"
                >
                  1940
                </option>
                <option
                  class="hidden"
                  value="1941"
                >
                  1941
                </option>
                <option
                  class="hidden"
                  value="1942"
                >
                  1942
                </option>
                <option
                  class="hidden"
                  value="1943"
                >
                  1943
                </option>
                <option
                  class="hidden"
                  value="1944"
                >
                  1944
                </option>
                <option
                  class="hidden"
                  value="1945"
                >
                  1945
                </option>
                <option
                  class="hidden"
                  value="1946"
                >
                  1946
                </option>
                <option
                  class="hidden"
                  value="1947"
                >
                  1947
                </option>
                <option
                  class="hidden"
                  value="1948"
                >
                  1948
                </option>
                <option
                  class="hidden"
                  value="1949"
                >
                  1949
                </option>
                <option
                  class="hidden"
                  value="1950"
                >
                  1950
                </option>
                <option
                  class="hidden"
                  value="1951"
                >
                  1951
                </option>
                <option
                  class="hidden"
                  value="1952"
                >
                  1952
                </option>
                <option
                  class="hidden"
                  value="1953"
                >
                  1953
                </option>
                <option
                  class="hidden"
                  value="1954"
                >
                  1954
                </option>
                <option
                  class="hidden"
                  value="1955"
                >
                  1955
                </option>
                <option
                  class="hidden"
                  value="1956"
                >
                  1956
                </option>
                <option
                  class="hidden"
                  value="1957"
                >
                  1957
                </option>
                <option
                  class="hidden"
                  value="1958"
                >
                  1958
                </option>
                <option
                  class="hidden"
                  value="1959"
                >
                  1959
                </option>
                <option
                  class="hidden"
                  value="1960"
                >
                  1960
                </option>
                <option
                  class="hidden"
                  value="1961"
                >
                  1961
                </option>
                <option
                  class="hidden"
                  value="1962"
                >
                  1962
                </option>
                <option
                  class="hidden"
                  value="1963"
                >
                  1963
                </option>
                <option
                  class="hidden"
                  value="1964"
                >
                  1964
                </option>
                <option
                  class="hidden"
                  value="1965"
                >
                  1965
                </option>
                <option
                  class="hidden"
                  value="1966"
                >
                  1966
                </option>
                <option
                  class="hidden"
                  value="1967"
                >
                  1967
                </option>
                <option
                  class="hidden"
                  value="1968"
                >
                  1968
                </option>
                <option
                  class="hidden"
                  value="1969"
                >
                  1969
                </option>
                <option
                  class="hidden"
                  value="1970"
                >
                  1970
                </option>
                <option
                  class="hidden"
                  value="1971"
                >
                  1971
                </option>
                <option
                  class="hidden"
                  value="1972"
                >
                  1972
                </option>
                <option
                  class="hidden"
                  value="1973"
                >
                  1973
                </option>
                <option
                  class="hidden"
                  value="1974"
                >
                  1974
                </option>
                <option
                  class="hidden"
                  value="1975"
                >
                  1975
                </option>
                <option
                  class="hidden"
                  value="1976"
                >
                  1976
                </option>
                <option
                  class="hidden"
                  value="1977"
                >
                  1977
                </option>
                <option
                  class="hidden"
                  value="1978"
                >
                  1978
                </option>
                <option
                  class="hidden"
                  value="1979"
                >
                  1979
                </option>
                <option
                  class="hidden"
                  value="1980"
                >
                  1980
                </option>
                <option
                  class="hidden"
                  value="1981"
                >
                  1981
                </option>
                <option
                  class="hidden"
                  value="1982"
                >
                  1982
                </option>
                <option
                  class="hidden"
                  value="1983"
                >
                  1983
                </option>
                <option
                  class="hidden"
                  value="1984"
                >
                  1984
                </option>
                <option
                  class="hidden"
                  value="1985"
                >
                  1985
                </option>
                <option
                  class="hidden"
                  value="1986"
                >
                  1986
                </option>
                <option
                  class="hidden"
                  value="1987"
                >
                  1987
                </option>
                <option
                  class="hidden"
                  value="1988"
                >
                  1988
                </option>
                <option
                  class="hidden"
                  value="1989"
                >
                  1989
                </option>
                <option
                  class="hidden"
                  value="1990"
                >
                  1990
                </option>
                <option
                  class="hidden"
                  value="1991"
                >
                  1991
                </option>
                <option
                  class="hidden"
                  value="1992"
                >
                  1992
                </option>
                <option
                  class="hidden"
                  value="1993"
                >
                  1993
                </option>
                <option
                  class="hidden"
                  value="1994"
                >
                  1994
                </option>
                <option
                  class="hidden"
                  value="1995"
                >
                  1995
                </option>
                <option
                  class="hidden"
                  value="1996"
                >
                  1996
                </option>
                <option
                  class="hidden"
                  value="1997"
                >
                  1997
                </option>
                <option
                  class="hidden"
                  value="1998"
                >
                  1998
                </option>
                <option
                  class="hidden"
                  value="1999"
                >
                  1999
                </option>
                <option
                  class="hidden"
                  value="2000"
                >
                  2000
                </option>
                <option
                  class="hidden"
                  value="2001"
                >
                  2001
                </option>
                <option
                  class="hidden"
                  value="2002"
                >
                  2002
                </option>
                <option
                  class="hidden"
                  value="2003"
                >
                  2003
                </option>
                <option
                  class="hidden"
                  value="2004"
                >
                  2004
                </option>
                <option
                  class="hidden"
                  value="2005"
                >
                  2005
                </option>
                <option
                  class="hidden"
                  value="2006"
                >
                  2006
                </option>
                <option
                  class="hidden"
                  value="2007"
                >
                  2007
                </option>
                <option
                  class="hidden"
                  value="2008"
                >
                  2008
                </option>
                <option
                  class="hidden"
                  value="2009"
                >
                  2009
                </option>
                <option
                  class="hidden"
                  value="2010"
                >
                  2010
                </option>
                <option
                  class="hidden"
                  value="2011"
                >
                  2011
                </option>
                <option
                  class="hidden"
                  value="2012"
                >
                  2012
                </option>
                <option
                  class="hidden"
                  value="2013"
                >
                  2013
                </option>
                <option
                  class="hidden"
                  value="2014"
                >
                  2014
                </option>
                <option
                  class="hidden"
                  value="2015"
                >
                  2015
                </option>
                <option
                  class="hidden"
                  value="2016"
                >
                  2016
                </option>
                <option
                  class="hidden"
                  value="2017"
                >
                  2017
                </option>
                <option
                  class="hidden"
                  value="2018"
                >
                  2018
                </option>
                <option
                  class="hidden"
                  value="2019"
                >
                  2019
                </option>
                <option
                  class="hidden"
                  value="2020"
                >
                  2020
                </option>
                <option
                  class="hidden"
                  value="2021"
                >
                  2021
                </option>
                <option
                  class="hidden"
                  value="2022"
                >
                  2022
                </option>
                <option
                  class="hidden"
                  value="2023"
                >
                  2023
                </option>
                <option
                  class="hidden"
                  value="2024"
                >
                  2024
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="year"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r1:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Year
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Month
                </option>
                <option
                  class="hidden"
                  value="0"
                >
                  January
                </option>
                <option
                  class="hidden"
                  value="1"
                >
                  February
                </option>
                <option
                  class="hidden"
                  value="2"
                >
                  March
                </option>
                <option
                  class="hidden"
                  value="3"
                >
                  April
                </option>
                <option
                  class="hidden"
                  value="4"
                >
                  May
                </option>
                <option
                  class="hidden"
                  value="5"
                >
                  June
                </option>
                <option
                  class="hidden"
                  value="6"
                >
                  July
                </option>
                <option
                  class="hidden"
                  value="7"
                >
                  August
                </option>
                <option
                  class="hidden"
                  value="8"
                >
                  September
                </option>
                <option
                  class="hidden"
                  value="9"
                >
                  October
                </option>
                <option
                  class="hidden"
                  value="10"
                >
                  November
                </option>
                <option
                  class="hidden"
                  value="11"
                >
                  December
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="month"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r2:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Month
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              class="w-full min-w-[10rem] relative text-tremor-default"
            >
              <select
                class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
                title="select-hidden"
              >
                <option
                  class="hidden"
                  disabled=""
                  hidden=""
                  value=""
                >
                  Select Day
                </option>
              </select>
              <div
                class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
                data-headlessui-state=""
                data-testid="date"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r3:"
                  type="button"
                >
                  <span
                    class="w-[90%] block truncate"
                  >
                    Select Day
                  </span>
                  <span
                    class="absolute inset-y-0 right-0 flex items-center mr-3"
                  >
                    <svg
                      class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                      fill="currentColor"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter"
          for="location"
        >
          Location
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50 "
              id="location"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter capitalize"
      >
        Skills
      </p>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            React
          </option>
          <option
            class="hidden"
            value="1"
          >
            Vue
          </option>
          <option
            class="hidden"
            value="2"
          >
            Angular
          </option>
          <option
            class="hidden"
            value="3"
          >
            Svelte
          </option>
          <option
            class="hidden"
            value="4"
          >
            Javascript
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r4:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1 bg-transparent"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="password"
        >
          Password
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <div
              class="relative"
            >
              <input
                class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50"
                disabled=""
                id="password"
                required=""
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 grid-column col-span-2 md:col-span-1 bg-transparent"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for="confirm-password"
        >
          Confirm Password
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <div
              class="relative"
            >
              <input
                class="block py-1.5 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer disabled:cursor-not-allowed disabled:opacity-50"
                disabled=""
                id="confirm-password"
                required=""
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tremor-Col-root col-span-2 w-full edit-user"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter"
      >
        Bio
      </p>
      <div
        class="quill mt-3 dark:text-white"
      >
        <div
          class="ql-toolbar ql-snow"
        >
          <span
            class="ql-formats"
          >
            <span
              class="ql-header ql-picker"
            >
              <span
                aria-controls="ql-picker-options-0"
                aria-expanded="false"
                aria-label="picker-label"
                class="ql-picker-label"
                role="button"
                tabindex="0"
              >
                <svg
                  viewBox="0 0 18 18"
                >
                   
                  <polygon
                    class="ql-stroke"
                    points="7 11 9 13 11 11 7 11"
                  />
                   
                  <polygon
                    class="ql-stroke"
                    points="7 7 9 5 11 7 7 7"
                  />
                   
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="ql-picker-options"
                id="ql-picker-options-0"
                tabindex="-1"
              >
                <span
                  class="ql-picker-item"
                  data-value="1"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="2"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="3"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item ql-selected"
                  role="button"
                  tabindex="0"
                />
              </span>
            </span>
            <select
              class="ql-header"
              style="display: none;"
            >
              <option
                value="1"
              />
              <option
                value="2"
              />
              <option
                value="3"
              />
              <option
                selected="selected"
              />
            </select>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-bold"
              class="ql-bold"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,4H9.5A2.5,2.5,0,0,1,12,6.5v0A2.5,2.5,0,0,1,9.5,9H5A0,0,0,0,1,5,9V4A0,0,0,0,1,5,4Z"
                />
                 
                <path
                  class="ql-stroke"
                  d="M5,9h5.5A2.5,2.5,0,0,1,13,11.5v0A2.5,2.5,0,0,1,10.5,14H5a0,0,0,0,1,0,0V9A0,0,0,0,1,5,9Z"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-italic"
              class="ql-italic"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="13"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="11"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="8"
                  x2="10"
                  y1="14"
                  y2="4"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-underline"
              class="ql-underline"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,3V9a4.012,4.012,0,0,0,4,4H9a4.012,4.012,0,0,0,4-4V3"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="12"
                  x="3"
                  y="15"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-link"
              class="ql-link"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="11"
                  y1="7"
                  y2="11"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M8.9,4.577a3.476,3.476,0,0,1,.36,4.679A3.476,3.476,0,0,1,4.577,8.9C3.185,7.5,2.035,6.4,4.217,4.217S7.5,3.185,8.9,4.577Z"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M13.423,9.1a3.476,3.476,0,0,0-4.679-.36,3.476,3.476,0,0,0,.36,4.679c1.392,1.392,2.5,2.542,4.679.36S14.815,10.5,13.423,9.1Z"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="ordered"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke ql-thin"
                  x1="2.5"
                  x2="4.5"
                  y1="5.5"
                  y2="5.5"
                />
                 
                <path
                  class="ql-fill"
                  d="M3.5,6A0.5,0.5,0,0,1,3,5.5V3.085l-0.276.138A0.5,0.5,0,0,1,2.053,3c-0.124-.247-0.023-0.324.224-0.447l1-.5A0.5,0.5,0,0,1,4,2.5v3A0.5,0.5,0,0,1,3.5,6Z"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M4.5,10.5h-2c0-.234,1.85-1.076,1.85-2.234A0.959,0.959,0,0,0,2.5,8.156"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M2.5,14.846a0.959,0.959,0,0,0,1.85-.109A0.7,0.7,0,0,0,3.75,14a0.688,0.688,0,0,0,.6-0.736,0.959,0.959,0,0,0-1.85-.109"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="bullet"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="14"
                  y2="14"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-clean"
              class="ql-clean"
              style="margin: 5px;"
              type="button"
            >
              <svg
                class=""
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="13"
                  y1="3"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="9.35"
                  y1="12"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="11"
                  x2="15"
                  y1="11"
                  y2="15"
                />
                 
                <line
                  class="ql-stroke"
                  x1="15"
                  x2="11"
                  y1="11"
                  y2="15"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="7"
                  x="2"
                  y="14"
                />
                 
              </svg>
            </button>
          </span>
        </div>
        <div
          class="ql-container ql-snow"
        >
          <div
            class="ql-editor ql-blank"
            contenteditable="true"
            data-gramm="false"
            data-placeholder="Some initial bold text"
          >
            <p>
              <br />
            </p>
          </div>
          <div
            class="ql-clipboard"
            contenteditable="true"
            tabindex="-1"
          />
          <div
            class="ql-tooltip ql-hidden"
          >
            <a
              class="ql-preview"
              href="about:blank"
              rel="noopener noreferrer"
              target="_blank"
            />
            <input
              data-formula="e=mc^2"
              data-link="https://quilljs.com"
              data-video="Embed URL"
              type="text"
            />
            <a
              class="ql-action"
              href="#"
            />
            <a
              class="ql-remove"
              href="#"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
